--- a/src/styles/ListPCard.css
+++ b/src/styles/ListPCard.css
@@ -1,3 +1,14 @@
 .list-p-card{
     margin-left: 10%;
 }
+
+#ButtonMore{
+    display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: 20%;
+    margin-left: 40%;
+    margin-right: auto;
+}
